# radar_lidar_fusion

./: CMakeLists.txt  README.md
data/: lidar_radar_input.txt
include/: fusion_radar_lidar.h  ground_truth_package.h  kalman_filter.h  measurement_package.h  tools.h
result/: result.txt
src/: fusion_radar_lidar.cpp  kalman_filter.cpp  main.cpp  tools.cpp
